# PathOfException

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_01_initial_schema.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  skills.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/modules/skills/: models.py  schemas.py
backend/app/modules/users/: dependencies.py  models.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: main.jsx  styles.css
